--- a/app/views/layouts/page.html.erb
+++ b/app/views/layouts/page.html.erb
@@ -12,7 +12,8 @@
 
 	<script type="text/x-mathjax-config">
 		MathJax.Hub.Config({
-			showProcessingMessages: true
+			showProcessingMessages: true,
+			extensions: [tex2jax]
 		});
 	</script>
 
