--- a/app/views/timeline/timeline.html.erb
+++ b/app/views/timeline/timeline.html.erb
@@ -1,15 +1,20 @@
-<div class="row" style="background-color: #eee">
-	<div class="col-xs-2"></div>
-	<div class="col-xs-8">
+<h1><%= Settings['long_course_name'] %></h1>
 
-		<% @items.each do |item| %>
-		<div class="panel panel-default">
-			<div class="panel-body">
-				<div class="pull-right small"><span title="<%= item.created_at.strftime("%A %d %b %Y %R") %>"><%= time_ago_in_words(item.created_at) %></span></div>
-				<%= render partial: "timeline/#{item.class.to_s.downcase}", object: item %>
-			</div>
-		</div>
+<div class="row" style="margin-bottom:2em">
+	<div class="col-xs-6">
+		<% @alerts.each do |item| %>
+		<%= render partial: "timeline/#{item.class.to_s.downcase}", object: item %>
 		<% end %>
+	</div>
 
+	<div class="col-xs-3">
+		<% @items.each do |item| %>
+		<%= render partial: "timeline/#{item.class.to_s.downcase}", object: item %>
+		<% end %>
+	</div>
+
+	<div class="col-xs-3">
+		<h4>Upcoming</h4>
+		Studiewijzer
 	</div>
 </div>
