--- a/app/views/timeline/timeline.html.erb
+++ b/app/views/timeline/timeline.html.erb
@@ -3,9 +3,9 @@
 <style>
 	.panel-default
 	{
-		-webkit-box-shadow: 0px 0px 35px 0px rgba(0,0,0,0.1);
-		-moz-box-shadow: 0px 0px 35px 0px rgba(0,0,0,0.1);
-		box-shadow: 0px 0px 35px 0px rgba(0,0,0,0.1);
+		-webkit-box-shadow: 0px 0px 35px rgba(140, 152, 164, 0.125);
+		-moz-box-shadow: 0px 0px 35px rgba(140, 152, 164, 0.125);
+		box-shadow: 0px 0px 35px rgba(140, 152, 164, 0.125);
 		border:0;
 	}
 </style>
