--- a/app/views/timeline/_grade.html.erb
+++ b/app/views/timeline/_grade.html.erb
@@ -1,6 +1,6 @@
+<p><small><span style="color:#999" title="<%= grade.created_at.strftime("%A %d %b %Y %R") %>"><%= time_ago_in_words(grade.created_at) %> ago</span></small></p>
 <h4>
 	<%= grade.pset.name %> was graded<br>
-	<small><span title="<%= grade.created_at.strftime("%A %d %b %Y %R") %>"><%= time_ago_in_words(grade.created_at) %></span> by <%= grade.grader.name %></small>
 </h4>
 <p>
 	<% grade.subgrades.each_pair do |k,v| %>
