--- a/app/views/timeline/_alert.html.erb
+++ b/app/views/timeline/_alert.html.erb
@@ -1,5 +1,6 @@
+<p><small><span style="color:#999" title="<%= alert.created_at.strftime("%A %d %b %Y %R") %>"><%= time_ago_in_words(alert.created_at) %> ago</span></small></p>
 <h4>
-	<span><%= alert.title %><br><small><span title="<%= alert.created_at.strftime("%A %d %b %Y %R") %>"><%= time_ago_in_words(alert.created_at) %></span></small></span>
+	<span><%= alert.title %><br></span>
 </h4>
 <p>
 <%= simple_markdown(alert.body) %>
