--- a/app/views/timeline/timeline.html.erb
+++ b/app/views/timeline/timeline.html.erb
@@ -1,17 +1,37 @@
-<h1 style="background-color: transparent; font-family: Palatino; color: #111; font-size: 30pt"><%= Settings['long_course_name'] %></h1>
+<h1 style="background-color:transparent; font-weight:500; color:#111; font-size: 30pt"><%= Settings['long_course_name'] %></h1>
 
 <style>
 	.panel-default
 	{
-		-webkit-box-shadow: 0px 0px 35px rgba(140, 152, 164, 0.125);
-		-moz-box-shadow: 0px 0px 35px rgba(140, 152, 164, 0.125);
-		box-shadow: 0px 0px 35px rgba(140, 152, 164, 0.125);
+		-webkit-box-shadow: 0px 0px 20px rgba(140, 152, 164, 0.125);
+		-moz-box-shadow: 0px 0px 20px rgba(140, 152, 164, 0.125);
+		box-shadow: 0px 0px 20px rgba(140, 152, 164, 0.125);
 		border:0;
+	}
+	
+	.panel-highlight:first-child
+	{
+		background-color:#FCEAEB;
+	}
+	
+	.panel-body p, .panel-body h4
+	{
+		line-height:26px;
+	}
+	
+	.panel-body h4
+	{
+		margin:0;
+	}
+	
+	.panel-body p
+	{
+		margin-bottom:0;
 	}
 </style>
 
 <div class="row" style="margin-bottom:2em">
-	<div class="col-xs-5">
+	<div class="col-sm-5">
 		<% @alerts.each do |item| %>
 		<div class="panel panel-default">
 			<div class="panel-body">
@@ -21,9 +41,9 @@
 		<% end %>
 	</div>
 
-	<div class="col-xs-4">
+	<div class="col-sm-4">
 		<% @items.each do |item| %>
-		<div class="panel panel-default">
+		<div class="panel panel-default panel-highlight">
 			<div class="panel-body">
 				<%= render partial: "timeline/#{item.class.to_s.downcase}", object: item %>
 			</div>
@@ -31,7 +51,7 @@
 		<% end %>
 	</div>
 
-	<div class="col-xs-3">
+	<div class="col-sm-3">
 		<div class="panel panel-default">
 			<div class="panel-body">
 				<h4>Upcoming</h4>
