--- a/app/views/timeline/timeline.html.erb
+++ b/app/views/timeline/timeline.html.erb
@@ -31,7 +31,7 @@
 </style>
 
 <div class="row" style="margin-bottom:2em">
-	<div class="col-sm-5">
+	<div class="col-sm-8">
 		<% @alerts.each do |item| %>
 		<div class="panel panel-default">
 			<div class="panel-body">
@@ -42,6 +42,16 @@
 	</div>
 
 	<div class="col-sm-4">
+		<div class="row">
+			<div class="col-sm-2">
+				<div class="panel panel-default">
+					<div class="panel-body">
+						<h4>Upcoming</h4>
+						Studiewijzer
+					</div>
+				</div>
+			</div>
+		</div>
 		<% @items.each do |item| %>
 		<div class="panel panel-default panel-highlight">
 			<div class="panel-body">
@@ -51,12 +61,4 @@
 		<% end %>
 	</div>
 
-	<div class="col-sm-3">
-		<div class="panel panel-default">
-			<div class="panel-body">
-				<h4>Upcoming</h4>
-				Studiewijzer
-			</div>
-		</div>
-	</div>
 </div>
