--- a/app/views/timeline/timeline.html.erb
+++ b/app/views/timeline/timeline.html.erb
@@ -31,7 +31,7 @@
 </style>
 
 <div class="row" style="margin-bottom:2em">
-	<div class="col-sm-8">
+	<div class="col-sm-7">
 		<% @alerts.each do |item| %>
 		<div class="panel panel-default">
 			<div class="panel-body">
@@ -41,13 +41,20 @@
 		<% end %>
 	</div>
 
-	<div class="col-sm-4">
+	<div class="col-sm-5">
 		<div class="row">
-			<div class="col-sm-2">
+			<div class="col-sm-8">
 				<div class="panel panel-default">
 					<div class="panel-body">
-						<h4>Upcoming</h4>
-						Studiewijzer
+						<h4>Upcoming: Music</h4>
+						20 september
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-4">
+				<div class="panel panel-default">
+					<div class="panel-body" style="text-align:center">
+						Studie-wijzer
 					</div>
 				</div>
 			</div>
