--- a/app/views/timeline/_grade.html.erb
+++ b/app/views/timeline/_grade.html.erb
@@ -2,7 +2,7 @@
 <h4>
 	<%= grade.pset.name %> was graded<br>
 </h4>
-<p>
+<p id="grade_buttons">
 	<% grade.subgrades.each_pair do |k,v| %>
 	<button class="btn btn-sm btn-info"><%= k.capitalize %> <span class="badge"><%= v %></span></button>
 	<% end %>
