--- a/app/views/timeline/timeline.html.erb
+++ b/app/views/timeline/timeline.html.erb
@@ -56,8 +56,8 @@
 			<div class="col-sm-8">
 				<div class="panel panel-default">
 					<div class="panel-body">
-						<h4>Upcoming: Music</h4>
-						20 september
+							<p><small><span style="color:#9a3335; text-transform: uppercase; font-size:smaller">20 september</span></small></p>
+							<h4>Upcoming: Music</h4>
 					</div>
 				</div>
 			</div>
