--- a/app/views/timeline/timeline.html.erb
+++ b/app/views/timeline/timeline.html.erb
@@ -54,7 +54,7 @@
 	<div class="col-sm-5">
 		<div class="row">
 			<div class="col-sm-8">
-				<div class="panel panel-default" style="background-color:#FFEDED">
+				<div class="panel panel-default" style="background-color:#FFCBCC">
 					<div class="panel-body">
 							<p><small><span style="color:#9a3335; text-transform: uppercase; font-size:smaller">20 september</span></small></p>
 							<h4>Upcoming: Music</h4>
@@ -62,7 +62,7 @@
 				</div>
 			</div>
 			<div class="col-sm-4">
-				<div class="panel panel-default" style="background-color:#DAE8FF">
+				<div class="panel panel-default" style="background-color:#CCD9EF">
 					<div class="panel-body">
 						<h4>Studie-wijzer</h4>
 					</div>
