dashboard for students + css

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -45,7 +45,9 @@ $container-lg: 970px;
 @import "navigation";
 @import "sidebar";
 @import "content";
+@import "timeline";
 
+@import "theme";
 @import "strap";
 @import "tweaks";
 
