--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,9 +42,9 @@
 </div>
 <% end %>
 
-		<section>
+		<sections>
 		<%= yield %>
-		</section>
+		</sections>
 	</div>
 	<%= render 'layouts/footer' %>
 	<div id="popup"></div>
