--- a/app/assets/stylesheets/strap.scss
+++ b/app/assets/stylesheets/strap.scss
@@ -69,11 +69,14 @@ body
 
 #content
 {
-	background-color:#fefefe
+	background-color:#fefefe;
+    padding-top:30px;
+    
 }
 
 #content section, #content header
 {
+//    margin-top:1.5em;
 	margin-bottom:1.5em;
 }
 
@@ -83,17 +86,9 @@ body
 }
 
 //
-// FULL WIDTH VIDEO + H1 STYLES
+// FULL WIDTH VIDEO
 //
 
-#content h1, #content .videoblock
-{
-    padding-top: 1em;
-    padding-bottom: 1em;
-    background-color: #F25D50;
-    color:white;
-    margin-top: 1em;
-}
 
 #content .videoblock
 {
@@ -119,18 +114,6 @@ body
     }
 }
 	
-#content h1
-{
-/*     margin-left: calc(-50vw + 50%);
-    padding-left: calc(50vw - 50%);
-    margin-right: calc(-50vw + 50%);
-    padding-right: calc(50vw - 50%); */
-	margin-right:-1em;
-	margin-left:-1em;
-	padding-left:1em;
-	padding-right:1em;
-}
-
 #content header
 {
 	margin-top:0;
