--- a/app/views/timeline/_grade.html.erb
+++ b/app/views/timeline/_grade.html.erb
@@ -1,4 +1,4 @@
-<p><small><span style="color:#339879; text-transform: uppercase; font-size:smaller" title="<%= grade.updated_at.strftime("%A %d %b %Y %R") %>"><%= time_ago_in_words(grade.updated_at) %> ago</span></small></p>
+<small><%= date_span_with_title(grade.created_at)%></small>
 <h4>
 	<%= grade.pset.name %> was graded<br>
 </h4>
