--- a/app/views/timeline/_submit.html.erb
+++ b/app/views/timeline/_submit.html.erb
@@ -1,3 +1,2 @@
-<p><small><span style="color:#999" title="<%= submit.created_at.strftime("%A %d %b %Y %R") %>"><%= time_ago_in_words(submit.created_at) %> ago</span></small></p>
+<small><%= date_span_with_title(submit.created_at)%></small>
 <h4>You submitted <%= submit.pset.name %>!</h4>
-
