--- a/app/views/timeline/timeline.html.erb
+++ b/app/views/timeline/timeline.html.erb
@@ -1,64 +1,8 @@
-<h1 style="background-color:transparent; font-weight:500; color:#111; font-size: 30pt"><%= Settings['long_course_name'] %></h1>
-
-<style>
-	#timeline ul
-	{
-		padding-left:20px;
-	}
-
-	#timeline ul#links
-	{
-		padding-left:0;
-	}
-	
-	#timeline ul#links li
-	{
-		list-style-type:none;
-	}
-	
-	
-	.panel
-	{
-		margin-bottom:30px;
-	}
-	
-	.panel-default
-	{
-		-webkit-box-shadow: 0px 0px 20px rgba(140, 152, 164, 0.125);
-		-moz-box-shadow: 0px 0px 20px rgba(140, 152, 164, 0.125);
-		box-shadow: 0px 0px 20px rgba(140, 152, 164, 0.125);
-		border:0;
-	}
-	
-	.panel-highlight
-	{
-		background-color:#FFE0A2;
-	}
-	
-	.panel-body p, .panel-body h4
-	{
-		line-height:26px;
-	}
-	
-	.panel-body h4
-	{
-		margin:0;
-	}
-	
-	.panel-body p
-	{
-		margin-bottom:0;
-	}
-	
-	#grade_buttons
-	{
-		line-height:52px;
-	}
-</style>
+<h1><%= Settings['long_course_name'] %></h1>
 
 <div id="timeline" class="row" style="margin-bottom:2em">
 	<div class="col-sm-7">
-		<h3 style="margin-left:.5em; margin-bottom:1em">Announcements</h3>
+		<h3>Announcements</h3>
 		<% @alerts.each do |item| %>
 		<div class="panel panel-default">
 			<div class="panel-body">
@@ -72,7 +16,7 @@
 		<div class="row">
 			<% if @schedule %>
 			<div class="col-sm-8">
-				<div class="panel panel-default" style="background-color:#FFCBCC">
+				<div class="panel panel-default" style="background-color:#F76C6C">
 					<div class="panel-body">
 							<h4 style="margin-bottom:1em"><%= @schedule.name %></h4>
 							<ul>
@@ -84,7 +28,7 @@
 			<% end %>
 			<% if Settings['links'] %>
 			<div class="col-sm-4">
-				<div class="panel panel-default" style="background-color:#CCD9EF">
+				<div class="panel panel-default" style="background-color:#A8D0E6">
 					<div class="panel-body">
 						<h4>Links</h4>
 						<ul id="links">
@@ -95,7 +39,7 @@
 			</div>
 			<% end %>
 		</div>
-		<h3 style="margin-left:.5em; margin-bottom:1em">Submissions</h3>
+		<h3>Submissions</h3>
 		<% @items.each do |item| %>
 		<div class="panel panel-default <%= "panel-highlight" if item.updated_at > 1.week.ago %>">
 			<div class="panel-body">
